--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "clean": "nwb clean",
     "start": "nwb serve",
     "test": "nwb test",
-    "test:watch": "nwb test --server"
+    "test:watch": "nwb test --server",
+    "storybook": "start-storybook -p 9001"
   },
-  "dependencies": {},
+  "dependencies": {
+    "raw-loader": "0.5.1",
+    "style-loader": "0.13.1"
+  },
   "peerDependencies": {
     "react": "15.x"
   },
   "devDependencies": {
+    "@kadira/storybook": "1.41.0",
     "nwb": "0.11.x",
     "react": "15.2.0",
     "react-dom": "15.2.0"
